...
                                            <outlet property="readMoreButton" destination="s56-wg-gex" id="jtm-OY-3cI"/>
                                            <outlet property="viewHightConstraint" destination="BVY-bF-ZmJ" id="krW-cQ-2NM"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="ResultsTable"/>
                                </userDefinedRuntimeAttributes>
                            </tableView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
...
